--- a/SagaOrchestrator.Infrastructure/SagaOrchestrator.Infrastructure.csproj
+++ b/SagaOrchestrator.Infrastructure/SagaOrchestrator.Infrastructure.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.5.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.1" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
     <ItemGroup>
