--- a/SagaOrchestrator.Application/SagaOrchestrator.Application.csproj
+++ b/SagaOrchestrator.Application/SagaOrchestrator.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="cypherly.message.contracts" Version="2.4.0" />
       <PackageReference Include="MassTransit.Abstractions" Version="8.5.1" />
     </ItemGroup>
 
