--- a/SagaOrchestrator.Test.Unit/SagaOrchestrator.Test.Unit.csproj
+++ b/SagaOrchestrator.Test.Unit/SagaOrchestrator.Test.Unit.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
@@ -16,6 +17,12 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SagaOrchestrator.API\SagaOrchestrator.API.csproj" />
+      <ProjectReference Include="..\SagaOrchestrator.Application\SagaOrchestrator.Application.csproj" />
+      <ProjectReference Include="..\SagaOrchestrator.Infrastructure\SagaOrchestrator.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
