--- a/SagaOrchestrator.API/SagaOrchestrator.API.csproj
+++ b/SagaOrchestrator.API/SagaOrchestrator.API.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -28,6 +29,12 @@
     <ItemGroup>
       <ProjectReference Include="..\SagaOrchestrator.Application\SagaOrchestrator.Application.csproj" />
       <ProjectReference Include="..\SagaOrchestrator.Infrastructure\SagaOrchestrator.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
